added footer and nav

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="calculator.js" defer></script>
 </head>
 
 <body>
+    <div class="main">
+    <div class="nav">Calculator</div>
     <div class="claculator">
         <div id="screen">
             <span class="firstArg"></span>
@@ -38,6 +41,11 @@
             <button class="button equal">=</button>
         </div>
     </div>
+    <div class="footer">
+        Copyright&copy; All rights Reserved.
+        <a href="https://github.com/alimustafa-poder" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+    </div>
+</div>
 </body>
 
 </html>
